change .overlay-content to white-space: nowrap to fix the issue of the menu items shifting down on closing sliding menu

--- a/styles/style.css
+++ b/styles/style.css
@@ -107,6 +107,7 @@ section {
     }
     /* Position content within overlay */
     .overlay-content {
+        white-space: nowrap;
         position: relative;
         top: 25%; /*25% from top*/
         width: 100%; /*100% width*/
